<resources>
    <string name="app_name">My Application</string>
    <string name="proportion_1_1">1:1</string>
    <string name="proportion_2_3">2:3</string>
    <string name="proportion_3_2">3:2</string>
    <string name="proportion_3_4">3:4</string>
    <string name="proportion_4_3">4:3</string>
    <string name="proportion_9_16">9:16</string>
    <string name="proportion_16_9">16:9</string>
    <string name="proportion_freedom">自由</string>
</resources>
